# ScaleAtoN-Crypto-Mapper

./: CMakeLists.txt  README.md
config/: targets.json
include/: config.h  jacobi_types.h  secp256k1_consts.h  uint256.h
scripts/: build.sh
src/: ec_math.cu  engine_wrapper.py  kangaroo_kernel.cu  main.cu  orchestrator.py
